=== HEAD

* Don't attempt to use unparseable defaults as literals when dumping the schema for a MySQL database (jeremyevans)

* Handle MySQL enum defaults in the schema dumper (jeremyevans)

* Support Database#server_version on MSSQL (dlee, jeremyevans)

* Support updating and deleting joined datasets on MSSQL (jfirebaugh)

* Support the OUTPUT SQL clause on MSSQL delete, insert, and update statements (jfirebaugh)

* Refactor generation of delete, insert, select, and update statements (jfirebaugh, jeremyevans)

* Do a better job of parsing defaults on MSSQL (jfirebaugh)

=== 3.4.0 (2009-09-02)

* Allow datasets without tables to work correctly on Oracle (mikegolod)

* Add #invert, #asc, and #desc to OrderedExpression (dlee)

* Allow validates_unique to take a block used to scope the uniqueness constraint (drfreeze, jeremyevans)

* Automatically save a new many_to_many associated object when associating the object via add_* (jeremyevans)

* Add a nested_attributes plugin for modifying associated objects directly through a model object (jeremyevans)

* Add an instance_hooks plugin for adding hooks to specific model instances (jeremyevans)

* Add a boolean_readers plugin for creating attribute? methods for boolean columns (jeremyevans)

* Add Dataset#ungrouped which removes existing grouping (jeremyevans)

* Make Dataset#group with nil or no arguments to remove existing grouping (dlee)

* Fix using multiple emulated ALTER TABLE statements (e.g. drop_column) in a single alter_table block on SQLite (jeremyevans)

* Don't allow inserting on a grouped dataset or a dataset that selects from multiple tables (jeremyevans)

* Allow class Item < Sequel::Model(DB2) to work (jeremyevans)

* Add Dataset#truncate for truncating tables (jeremyevans)

* Add Database#run method for executing arbitrary SQL on a database (jeremyevans)

* Handle index parsing correctly for tables in a non-default schema on JDBC (jfirebaugh)
